--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <h1> Welcome to Abigail's website</h1>
-  <h2> URLS: </h2> 
+  <h2> Github URL: https://github.com/aritchey5/SDEV255GitExample </h2> 
+  <h3> New Tab URL: https://replit.com/@aritchey51/SDEV-255-M01-1-Env </h3>
   <script src="script.js"></script>
 
   <!--
